fix text-overflow with big numbers

--- a/src/modules/toolbox/components/measureToolContent/measureToolContent.css
+++ b/src/modules/toolbox/components/measureToolContent/measureToolContent.css
@@ -63,11 +63,11 @@
    padding:  0.8em 1.5em 0.8em 1.5em;
 }
 .prime-text{
-    left: 4em;
-    font-size: 2em;
+    left: 3em;
+    font-size: 2.2em;
     position: absolute;
     text-align: left;
-    width: 6em;
+    width: 7em;
    
 }
 .sub-text{
